# crawler

./: Cargo.toml  README.md
assets/docs/: CONFIG_GUIDE.md  config_guide.html
src/: crawler.rs  error.rs  lib.rs  main.rs  selector.rs  spider.rs
src/config/: loader.rs  mod.rs  schema.rs
src/metrics/: collector.rs  mod.rs  snapshot.rs
src/output/: console.rs  csv.rs  json.rs  mod.rs  sqlite.rs
